update trace ignore.